<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="actinon_settings">Settings</string>
    <string name="edit_message">EnterMessage</string>
    <string name="button_send">Send</string>
    <string name="go_to_counter">Counter</string>
    <string name="increment">Add</string>
    <string name="decrement">Subtract</string>
    <string name="set_value">Set</string>
    <string name="reset">Wyzeruj</string>
    <string name="set_value_to_counter">podaj wartość</string>


</resources>
